React router activated.

--- a/itv/package.json
+++ b/itv/package.json
@@ -28,7 +28,9 @@
     "react-tv-cli": "^0.4.3",
     "react-tv-navigation": "^0.4.3",
     "webpack": "^3.8.1",
-    "webpack-dev-server": "^2.9.4"
+    "webpack-dev-server": "^2.9.4",
+    "react-dom": "16.2.0",
+    "react-router-dom": "4.3.1"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
